test/spec_vectors/elem/ok/module_29.wat
(module (func) (table 1 funcref) (elem (i32.const 0) funcref (ref.func 0)))