test/spec_vectors/elem/fail/module_74.wat
(module (table 1 funcref) (elem (i32.const 0) funcref (item (ref.null func) (ref.null func))))